--- a/comps/animation/src/requirements.txt
+++ b/comps/animation/src/requirements.txt
@@ -1,29 +1,29 @@
-aiohttp
-basicsr
-docarray[full]
-facexlib
-fastapi
-ffmpeg-python
-gradio
-gradio_client
-grpcio
-huggingface-hub
-librosa
-lmdb
-numba
+aiohttp==3.11.18
+basicsr==1.4.2
+docarray[full]==0.41.0
+facexlib==0.3.0
+fastapi==0.115.12
+ffmpeg-python==0.2.0
+gradio==5.25.2
+gradio-client==1.8.0
+grpcio==1.71.0
+huggingface-hub==0.30.2
+librosa==0.11.0
+lmdb==1.6.2
+numba==0.60.0
 numpy==1.23.5
-opencv-python
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-pandas
-prometheus-fastapi-instrumentator
-pyarrow
-pydantic
-pyyaml
-scipy
-shortuuid
-tavily-python
-tb-nightly
-tqdm
-yapf
+opencv-python==4.11.0.86
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pandas==2.2.3
+prometheus-fastapi-instrumentator==7.1.0
+pyarrow==19.0.1
+pydantic==2.11.3
+pyyaml==6.0.2
+scipy==1.15.2
+shortuuid==1.0.13
+tavily-python==0.5.4
+tb-nightly==2.20.0a20250421
+tqdm==4.67.1
+yapf==0.43.0
