--- a/comps/dataprep/src/requirements.txt
+++ b/comps/dataprep/src/requirements.txt
@@ -1,71 +1,70 @@
-accelerate
-beautifulsoup4
-cairosvg
-decord
-docarray[full]
-docling
-docx2txt
-easyocr
-einops
-elasticsearch
-fastapi
-future
-graspologic
-html2text
-huggingface_hub
-ipython
-json-repair
-langchain
-langchain-arangodb
-langchain-community
-langchain-elasticsearch
-langchain-experimental
-langchain-openai
-langchain-pinecone
-langchain-redis
-langchain-text-splitters
-langchain-vdms>=0.1.4
-langchain_huggingface
-langchain_milvus
-llama-index
+accelerate==1.6.0
+beautifulsoup4==4.13.4
+cairosvg==2.7.1
+decord==0.6.0
+docarray[full]==0.41.0
+docling==2.30.0
+docx2txt==0.9
+easyocr==1.7.2
+einops==0.8.1
+fastapi==0.115.12
+future==1.0.0
+graspologic==3.4.1
+html2text==2025.4.15
+huggingface-hub==0.30.2
+ipython==8.35.0
+json-repair==0.41.1
+langchain==0.3.23
+langchain-arangodb==0.0.4
+langchain-community==0.3.21
+langchain-elasticsearch==0.3.2
+langchain-experimental==0.3.4
+langchain-huggingface==0.1.2
+langchain-milvus==0.1.9
+langchain-openai==0.3.14
+langchain-pinecone==0.2.5
+langchain-redis==0.2.0
+langchain-text-splitters==0.3.8
+langchain-vdms==0.1.4
+llama-index==0.12.19
 llama-index-core==0.12.19
-llama-index-embeddings-text-embeddings-inference
-llama-index-graph-stores-neo4j
-llama-index-llms-openai
-llama-index-llms-openai-like
-markdown
-moviepy
-neo4j
-numpy
-openai
-openai-whisper
-opencv-python
-opensearch-py
+llama-index-embeddings-text-embeddings-inference==0.3.2
+llama-index-graph-stores-neo4j==0.4.6
+llama-index-llms-openai==0.3.37
+llama-index-llms-openai-like==0.3.4
+markdown==3.8
+moviepy==2.1.2
+neo4j==5.28.1
+numpy==1.26.4
+openai==1.75.0
+openai-whisper==20240930
+opencv-python==4.11.0.86
+opensearch-py==2.8.0
 opentelemetry-api==1.27.0
 opentelemetry-exporter-otlp==1.27.0
 opentelemetry-sdk==1.27.0
-pandas
+pandas==2.2.3
 pgvector==0.2.5
-Pillow
-pinecone-client
-prometheus-fastapi-instrumentator
+pillow==10.4.0
+pinecone-client==6.0.0
+prometheus-fastapi-instrumentator==7.1.0
 protobuf==4.24.2
-psycopg2
-pymupdf
-pyspark
-pytesseract
-python-bidi
-python-docx
-python-pptx
-qdrant-client
-redis
-scipy
-sentence_transformers
-shortuuid
-tiktoken
-tqdm
-typing
-tzlocal
-unstructured[all-docs]
-uvicorn
-webvtt-py
+psycopg2==2.9.10
+pymupdf==1.25.5
+pyspark==3.5.5
+pytesseract==0.3.13
+python-bidi==0.6.6
+python-docx==1.1.2
+python-pptx==1.0.2
+qdrant-client==1.13.3
+redis==5.2.1
+scipy==1.12.0
+sentence-transformers==4.1.0
+shortuuid==1.0.13
+tiktoken==0.9.0
+tqdm==4.67.1
+typing==3.7.4.3
+tzlocal==5.3.1
+unstructured[all-docs]==0.17.2
+uvicorn==0.34.2
+webvtt-py==0.5.1
