--- a/comps/rerankings/src/requirements.txt
+++ b/comps/rerankings/src/requirements.txt
@@ -1,11 +1,11 @@
-aiohttp
-docarray[full]
-fastapi
-httpx
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
-sentence_transformers
-shortuuid
-uvicorn
+aiohttp==3.11.18
+docarray[full]==0.41.0
+fastapi==0.115.12
+httpx==0.28.1
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
+sentence-transformers==4.1.0
+shortuuid==1.0.13
+uvicorn==0.34.2
