--- a/comps/retrievers/src/requirements.txt
+++ b/comps/retrievers/src/requirements.txt
@@ -1,50 +1,50 @@
-aiofiles
-bs4
-cairosvg
-decord
-docarray[full]
-docx2txt
-easyocr
-einops
-fastapi
-future
-graspologic
+aiofiles==24.1.0
+bs4==0.0.2
+cairosvg==2.7.1
+decord==0.6.0
+docarray[full]==0.41.0
+docx2txt==0.9
+easyocr==1.7.2
+einops==0.8.1
+fastapi==0.115.12
+future==1.0.0
+graspologic==3.4.1
 haystack-ai==2.3.1
-langchain-arangodb
-langchain-elasticsearch
-langchain-openai
-langchain-pinecone
-langchain-vdms>=0.1.4
-langchain_community
-langchain_huggingface
-langchain_milvus
+langchain-arangodb==0.0.4
+langchain-community==0.3.21
+langchain-elasticsearch==0.3.2
+langchain-huggingface==0.1.2
+langchain-milvus==0.1.9
+langchain-openai==0.3.14
+langchain-pinecone==0.2.5
+langchain-vdms==0.1.4
 llama-index-core==0.12.19
-llama-index-embeddings-openai
-llama-index-embeddings-text-embeddings-inference
-llama-index-llms-openai
-llama-index-llms-openai-like
-llama-index-llms-text-generation-inference
-llama_index_graph_stores_neo4j
-neo4j
-numpy
-opensearch-py
+llama-index-embeddings-openai==0.3.1
+llama-index-embeddings-text-embeddings-inference==0.3.2
+llama-index-graph-stores-neo4j==0.4.6
+llama-index-llms-openai==0.3.37
+llama-index-llms-openai-like==0.3.4
+llama-index-llms-text-generation-inference==0.3.2
+neo4j==5.28.1
+numpy==1.26.4
+opensearch-py==2.8.0
 opentelemetry-api==1.27.0
 opentelemetry-exporter-otlp==1.27.0
 opentelemetry-sdk==1.27.0
-pathway
-pgvector
-prometheus-fastapi-instrumentator
+pathway==0.3.3
+pgvector==0.4.0
+prometheus-fastapi-instrumentator==7.1.0
 protobuf==4.24.2
-psycopg2-binary
-pydantic
-pymupdf
-pytesseract
-python-docx
-python-multipart
-python-pptx
-qdrant-haystack
-redis
-sentence_transformers
-shortuuid
-tiktoken
-uvicorn
+psycopg2-binary==2.9.10
+pydantic==2.11.3
+pymupdf==1.25.5
+pytesseract==0.3.13
+python-docx==1.1.2
+python-multipart==0.0.20
+python-pptx==1.0.2
+qdrant-haystack==8.1.0
+redis==5.2.1
+sentence-transformers==4.1.0
+shortuuid==1.0.13
+tiktoken==0.9.0
+uvicorn==0.34.2
