--- a/comps/third_parties/llama-vision/src/requirements.txt
+++ b/comps/third_parties/llama-vision/src/requirements.txt
@@ -1,15 +1,14 @@
-accelerate>=0.26.0
-datasets
-docarray[full]
-fastapi
-numpy<2
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-optimum[habana]
-prometheus-fastapi-instrumentator
+accelerate==1.6.0
+datasets==3.5.0
+docarray[full]==0.41.0
+fastapi==0.115.12
+numpy==1.26.4
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+optimum[habana]==1.13.2
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.9.2
-pydub
-shortuuid
-transformers==4.48.0
-uvicorn
+pydub==0.25.1
+shortuuid==1.0.13
+uvicorn==0.34.2
