--- a/comps/third_parties/llava/src/requirements.txt
+++ b/comps/third_parties/llava/src/requirements.txt
@@ -1,14 +1,14 @@
-datasets
-docarray[full]
-fastapi
-huggingface_hub
-langchain-core
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-optimum[habana]
-prometheus-fastapi-instrumentator
+datasets==3.5.0
+docarray[full]==0.41.0
+fastapi==0.115.12
+huggingface-hub==0.30.2
+langchain-core==0.3.54
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+optimum[habana]==1.24.0
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.7.2
-pydub
-shortuuid
-uvicorn
+pydub==0.25.1
+shortuuid==1.0.13
+uvicorn==0.34.2
