--- a/comps/third_parties/predictionguard/src/requirements.txt
+++ b/comps/third_parties/predictionguard/src/requirements.txt
@@ -1,14 +1,14 @@
-aiohttp
-docarray
-fastapi
-httpx
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-Pillow
-predictionguard
-prometheus-fastapi-instrumentator
-pyyaml
-requests
-shortuuid
-uvicorn
+aiohttp==3.11.18
+docarray==0.41.0
+fastapi==0.115.12
+httpx==0.28.1
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pillow==11.2.1
+predictionguard==2.8.1
+prometheus-fastapi-instrumentator==7.1.0
+pyyaml==6.0.2
+requests==2.32.3
+shortuuid==1.0.13
+uvicorn==0.34.2
