--- a/comps/web_retrievers/src/requirements.txt
+++ b/comps/web_retrievers/src/requirements.txt
@@ -1,18 +1,18 @@
-bs4
-chromadb
-docarray[full]
-fastapi
-google-api-python-client>=2.100.0
-html2text
+bs4==0.0.2
+chromadb==0.6.3
+docarray[full]==0.41.0
+fastapi==0.115.9
+google-api-python-client==2.167.0
+html2text==2025.4.15
 huggingface-hub==0.27.1
-langchain-chroma
-langchain-google-community
-langchain-huggingface
-langchain_community
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
-sentence_transformers
-shortuuid
-uvicorn
+langchain-chroma==0.2.3
+langchain-community==0.3.21
+langchain-google-community==2.0.7
+langchain-huggingface==0.1.2
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
+sentence-transformers==4.1.0
+shortuuid==1.0.13
+uvicorn==0.34.2
