--- a/comps/asr/src/requirements.txt
+++ b/comps/asr/src/requirements.txt
@@ -1,16 +1,16 @@
-accelerate
-aiohttp
-datasets
-docarray[full]
-fastapi
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
+accelerate==1.6.0
+aiohttp==3.11.18
+datasets==3.5.0
+docarray[full]==0.41.0
+fastapi==0.115.12
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.7.2
-pydub
-python-multipart
-shortuuid
-transformers
-uvicorn
-zhconv
+pydub==0.25.1
+python-multipart==0.0.20
+shortuuid==1.0.13
+transformers==4.51.3
+uvicorn==0.34.2
+zhconv==1.4.3
