--- a/comps/embeddings/src/requirements.txt
+++ b/comps/embeddings/src/requirements.txt
@@ -1,14 +1,14 @@
-aiohttp
-docarray
-fastapi
-huggingface_hub
-openai
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-Pillow
+aiohttp==3.11.18
+docarray==0.41.0
+fastapi==0.115.12
+huggingface-hub==0.30.2
+openai==1.75.0
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pillow==11.2.1
 predictionguard==2.2.1
-prometheus-fastapi-instrumentator
-PyYAML
-shortuuid
-uvicorn
+prometheus-fastapi-instrumentator==7.1.0
+pyyaml==6.0.2
+shortuuid==1.0.13
+uvicorn==0.34.2
