--- a/comps/finetuning/src/requirements.txt
+++ b/comps/finetuning/src/requirements.txt
@@ -1,19 +1,19 @@
-aiohttp
-datasets
-docarray
-fastapi
-httpx
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-peft
-prometheus-fastapi-instrumentator
+aiohttp==3.11.18
+datasets==3.5.0
+docarray==0.41.0
+fastapi==0.115.12
+httpx==0.28.1
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+peft==0.15.2
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.8.2
-pydantic_yaml
-python-multipart
-pyyaml
-ray[all]
-requests
-shortuuid
-transformers
-uvicorn
+pydantic-yaml==1.4.0
+python-multipart==0.0.20
+pyyaml==6.0.2
+ray[all]==2.44.1
+requests==2.32.3
+shortuuid==1.0.13
+transformers==4.51.3
+uvicorn==0.34.2
