--- a/comps/guardrails/src/bias_detection/requirements.txt
+++ b/comps/guardrails/src/bias_detection/requirements.txt
@@ -1,16 +1,16 @@
 aiohttp==3.10.11
-docarray[full]
-fastapi
-httpx
-huggingface_hub
-langchain-community
-langchain-huggingface
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
-pyyaml
-requests
-shortuuid
-transformers
-uvicorn
+docarray[full]==0.41.0
+fastapi==0.115.12
+httpx==0.28.1
+huggingface-hub==0.30.2
+langchain-community==0.3.21
+langchain-huggingface==0.1.2
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
+pyyaml==6.0.2
+requests==2.32.3
+shortuuid==1.0.13
+transformers==4.51.3
+uvicorn==0.34.2
