--- a/comps/guardrails/src/hallucination_detection/requirements.txt
+++ b/comps/guardrails/src/hallucination_detection/requirements.txt
@@ -1,17 +1,15 @@
-aiohttp
-docarray[full]
-fastapi
-huggingface_hub
-langchain #==0.1.12
-langchain-huggingface
-langchain-openai
-langchain_community
-langchainhub
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
-shortuuid
-transformers
-uvicorn
-vllm
+aiohttp==3.11.18
+docarray[full]==0.41.0
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-huggingface==0.1.2
+langchain-openai==0.3.14
+langchainhub==0.1.21
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
+shortuuid==1.0.13
+transformers==4.51.3
+uvicorn==0.34.2
+vllm==0.8.3
