--- a/comps/guardrails/src/pii_detection/requirements.txt
+++ b/comps/guardrails/src/pii_detection/requirements.txt
@@ -1,13 +1,13 @@
-aiohttp
-docarray
-fastapi
-huggingface_hub
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-Pillow
-predictionguard
-prometheus-fastapi-instrumentator
-shortuuid
-transformers
-uvicorn
+aiohttp==3.11.18
+docarray==0.41.0
+fastapi==0.115.12
+huggingface-hub==0.30.2
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pillow==11.2.1
+predictionguard==2.8.1
+prometheus-fastapi-instrumentator==7.1.0
+shortuuid==1.0.13
+transformers==4.51.3
+uvicorn==0.34.2
