--- a/comps/image2video/src/requirements.txt
+++ b/comps/image2video/src/requirements.txt
@@ -1,17 +1,17 @@
-accelerate
-datasets
-diffusers
-docarray[full]
-fastapi
-opencv-python
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
+accelerate==0.33.0
+datasets==3.5.0
+diffusers==0.31.0
+docarray[full]==0.41.0
+fastapi==0.115.12
+opencv-python==4.11.0.86
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
 optimum-habana==1.17.0
-prometheus-fastapi-instrumentator
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.7.2
-pydub
-shortuuid
-torch
-transformers
-uvicorn
+pydub==0.25.1
+shortuuid==1.0.13
+torch==2.6.0
+transformers==4.49.0
+uvicorn==0.34.2
