--- a/comps/llms/requirements.txt
+++ b/comps/llms/requirements.txt
@@ -1,10 +1,10 @@
-docarray[full]
-fastapi
-huggingface_hub
-langchain
-langchain_community
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-shortuuid
-uvicorn
+docarray[full]==0.41.0
+fastapi==0.115.12
+huggingface-hub==0.30.2
+langchain==0.3.23
+langchain-community==0.3.21
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+shortuuid==1.0.13
+uvicorn==0.34.2
