--- a/comps/llms/src/doc-summarization/requirements.txt
+++ b/comps/llms/src/doc-summarization/requirements.txt
@@ -1,16 +1,16 @@
-docarray[full]
-fastapi
+docarray[full]==0.41.0
+fastapi==0.115.12
 httpx==0.27.2
-huggingface_hub==0.27.1
+huggingface-hub==0.27.1
 langchain==0.3.14
-langchain-huggingface
-langchain-openai
-langchain_community==0.3.14
-langchainhub
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
-shortuuid
-transformers
-uvicorn
+langchain-community==0.3.14
+langchain-huggingface==0.1.2
+langchain-openai==0.3.14
+langchainhub==0.1.21
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
+shortuuid==1.0.13
+transformers==4.50.3
+uvicorn==0.34.2
