--- a/comps/llms/src/text-generation/requirements.txt
+++ b/comps/llms/src/text-generation/requirements.txt
@@ -1,17 +1,17 @@
-aiohttp
-boto3
-docarray[full]
-fastapi
+aiohttp==3.11.18
+boto3==1.37.37
+docarray[full]==0.41.0
+fastapi==0.115.12
 httpx==0.27.2
-huggingface_hub
-langchain_core
+huggingface-hub==0.30.2
+langchain-core==0.3.54
 openai==1.57.4
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-Pillow
-predictionguard
-prometheus-fastapi-instrumentator
-shortuuid
-transformers
-uvicorn
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pillow==11.2.1
+predictionguard==2.8.1
+prometheus-fastapi-instrumentator==7.1.0
+shortuuid==1.0.13
+transformers==4.51.3
+uvicorn==0.34.2
