--- a/comps/llms/utils/lm-eval/requirements.txt
+++ b/comps/llms/utils/lm-eval/requirements.txt
@@ -1,4 +1,4 @@
 bigcode-eval@git+https://github.com/bigcode-project/bigcode-evaluation-harness.git
 lm-eval==0.4.3
-opea-eval
+opea-eval==1.2
 pydantic==2.7.2
