--- a/comps/struct2graph/src/requirements.txt
+++ b/comps/struct2graph/src/requirements.txt
@@ -1,19 +1,19 @@
-docarray[full]
-fastapi
-hanging_threads
-langchain
-langchain-community
-langchain-neo4j
-neo4j 
-numpy
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-pandas
-prometheus_fastapi_instrumentator
-psycopg2-binary 
-pyarrow
-pydantic
-shortuuid
-sqlalchemy
-uvicorn
+docarray[full]==0.41.0
+fastapi==0.115.12
+hanging-threads==2.0.7
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-neo4j==0.4.0
+neo4j==5.28.1
+numpy==2.2.5
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pandas==2.2.3
+prometheus-fastapi-instrumentator==7.1.0
+psycopg2-binary==2.9.10
+pyarrow==19.0.1
+pydantic==2.11.3
+shortuuid==1.0.13
+sqlalchemy==2.0.40
+uvicorn==0.34.2
