--- a/comps/text2cypher/src/requirements.txt
+++ b/comps/text2cypher/src/requirements.txt
@@ -1,29 +1,28 @@
-accelerate
-docarray[full]
-fastapi
-huggingface_hub
-json_repair
-langchain
-langchain-community
-langchain-huggingface
-langchain_experimental
-llama-index
-llama-index-embeddings-huggingface
-llama-index-embeddings-langchain
-llama-index-graph-stores-neo4j
-llama-index-llms-huggingface
-llama-index-llms-huggingface-api
-neo4j
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-peft
-prometheus-fastapi-instrumentator
-pydub
-pyprojroot
-sentence-transformers
-shortuuid
-transformers
-unstructured
-urllib3
-uvicorn
+accelerate==1.6.0
+docarray[full]==0.41.0
+fastapi==0.115.12
+huggingface-hub==0.30.2
+json-repair==0.41.1
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-experimental==0.3.4
+langchain-huggingface==0.1.2
+llama-index==0.12.31
+llama-index-embeddings-huggingface==0.5.3
+llama-index-embeddings-langchain==0.3.0
+llama-index-graph-stores-neo4j==0.4.6
+llama-index-llms-huggingface==0.5.0
+llama-index-llms-huggingface-api==0.4.1
+neo4j==5.28.1
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+peft==0.15.2
+prometheus-fastapi-instrumentator==7.1.0
+pydub==0.25.1
+pyprojroot==0.3.0
+sentence-transformers==4.1.0
+shortuuid==1.0.13
+unstructured==0.17.2
+urllib3==2.4.0
+uvicorn==0.34.2
