--- a/comps/text2image/src/requirements.txt
+++ b/comps/text2image/src/requirements.txt
@@ -1,15 +1,15 @@
-accelerate
-datasets
-diffusers
-docarray[full]
-fastapi
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
+accelerate==1.6.0
+datasets==3.5.0
+diffusers==0.33.1
+docarray[full]==0.41.0
+fastapi==0.115.12
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.7.2
-pydub
-shortuuid
-torch
-transformers
-uvicorn
+pydub==0.25.1
+shortuuid==1.0.13
+torch==2.6.0
+transformers==4.51.3
+uvicorn==0.34.2
