--- a/comps/text2kg/src/requirements.txt
+++ b/comps/text2kg/src/requirements.txt
@@ -1,20 +1,17 @@
-# Copyright (C) 2025 Intel Corporation
-# SPDX-License-Identifier: Apache-2.0
-docarray[full]
-fastapi
-langchain_huggingface 
-langchain_neo4j 
-llama-index-graph-stores-neo4j
-llama_index 
-llama_index-embeddings-huggingface 
-llama_index-llms-huggingface
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-pandas
-prometheus_fastapi_instrumentator
-pydantic
-pyprojroot
-shortuuid
-transformers
-uvicorn
+docarray[full]==0.41.0
+fastapi==0.115.12
+langchain-huggingface==0.1.2
+langchain-neo4j==0.4.0
+llama-index==0.12.31
+llama-index-embeddings-huggingface==0.5.3
+llama-index-graph-stores-neo4j==0.4.6
+llama-index-llms-huggingface==0.5.0
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pandas==2.2.3
+prometheus-fastapi-instrumentator==7.1.0
+pydantic==2.11.3
+pyprojroot==0.3.0
+shortuuid==1.0.13
+uvicorn==0.34.2
