--- a/comps/third_parties/bridgetower/src/requirements.txt
+++ b/comps/third_parties/bridgetower/src/requirements.txt
@@ -1,15 +1,15 @@
-aiohttp
-docarray[full]
-fastapi
-huggingface_hub
-langchain
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
+aiohttp==3.11.18
+docarray[full]==0.41.0
+fastapi==0.115.12
+huggingface-hub==0.30.2
+langchain==0.3.23
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.8.2
-shortuuid
-torch
-torchvision
-transformers
-uvicorn
+shortuuid==1.0.13
+torch==2.6.0
+torchvision==0.21.0
+transformers==4.51.3
+uvicorn==0.34.2
