--- a/comps/third_parties/clip/src/requirements.txt
+++ b/comps/third_parties/clip/src/requirements.txt
@@ -1,16 +1,15 @@
-aiohttp
-dateparser
-docarray[full]
-einops
-fastapi
-huggingface_hub
-langchain
-open_clip_torch
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
-sentence_transformers
-shortuuid
-uvicorn
-
+aiohttp==3.11.18
+dateparser==1.2.1
+docarray[full]==0.41.0
+einops==0.8.1
+fastapi==0.115.12
+huggingface-hub==0.30.2
+langchain==0.3.23
+open-clip-torch==2.32.0
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
+sentence-transformers==4.1.0
+shortuuid==1.0.13
+uvicorn==0.34.2
