--- a/comps/third_parties/pathway/src/requirements.txt
+++ b/comps/third_parties/pathway/src/requirements.txt
@@ -1,8 +1,8 @@
-langchain
-langchain-community
-langchain-huggingface
-openai
-pathway[xpack-llm]
-sentence-transformers
-tiktoken
-unstructured[all-docs] >= 0.16
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-huggingface==0.1.2
+openai==1.75.0
+pathway[xpack-llm]==0.10.1
+sentence-transformers==4.1.0
+tiktoken==0.9.0
+unstructured[all-docs]==0.17.2
