--- a/comps/third_parties/speecht5/src/requirements.txt
+++ b/comps/third_parties/speecht5/src/requirements.txt
@@ -1,14 +1,14 @@
-accelerate
-aiohttp
-docarray[full]
-fastapi
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-prometheus-fastapi-instrumentator
+accelerate==1.6.0
+aiohttp==3.11.18
+docarray[full]==0.41.0
+fastapi==0.115.12
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+prometheus-fastapi-instrumentator==7.1.0
 pydantic==2.9.1
-sentencepiece
-shortuuid
-soundfile
-transformers
-uvicorn
+sentencepiece==0.2.0
+shortuuid==1.0.13
+soundfile==0.13.1
+transformers==4.51.3
+uvicorn==0.34.2
