--- a/comps/third_parties/video-llama/src/requirements.txt
+++ b/comps/third_parties/video-llama/src/requirements.txt
@@ -1,36 +1,32 @@
-# OPEA
-beautifulsoup4
-
-# microservice
-decord
-docarray
-einops
-faiss-cpu
-fastapi
-ftfy
-iopath
-langchain
-langchain-community
-langchain-core
-numpy
-omegaconf
-opencv-python-headless
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-pandas
-Pillow
-prometheus_fastapi_instrumentator
-pytorchvideo
-sentence-transformers
-sentencepiece
-shortuuid
-timm
-torch==2.5.1 --index-url https://download.pytorch.org/whl/cpu
-torchaudio~=2.5.1 --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.20.1 --index-url https://download.pytorch.org/whl/cpu
-transformers
-uvicorn
-validators
-webdataset
-werkzeug
+beautifulsoup4==4.13.4
+decord==0.6.0
+docarray==0.41.0
+einops==0.8.1
+faiss-cpu==1.10.0
+fastapi==0.115.12
+ftfy==6.3.1
+iopath==0.1.10
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-core==0.3.54
+numpy==2.2.5
+omegaconf==2.3.0
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pandas==2.2.3
+pillow==11.2.1
+prometheus-fastapi-instrumentator==7.1.0
+pytorchvideo==0.1.5
+sentence-transformers==4.1.0
+sentencepiece==0.2.0
+shortuuid==1.0.13
+timm==1.0.15
+torch==2.5.1
+torchvision==0.20.1
+transformers==4.51.3
+uvicorn==0.34.2
+validators==0.34.0
+webdataset==0.2.111
+werkzeug==3.1.3
