--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-aiofiles
-aiohttp
-docarray
-docx2txt
-fastapi
-httpx
-kubernetes
-langchain
-langchain-community
-opentelemetry-api
-opentelemetry-exporter-otlp
-opentelemetry-sdk
-Pillow
-prometheus-fastapi-instrumentator
-pypdf
-python-arango
-python-multipart
-pyyaml
-requests
-shortuuid
-uvicorn
+aiofiles==24.1.0
+aiohttp==3.11.18
+docarray==0.41.0
+docx2txt==0.9
+fastapi==0.115.12
+httpx==0.28.1
+kubernetes==32.0.1
+langchain==0.3.23
+langchain-community==0.3.21
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-sdk==1.32.1
+pillow==11.2.1
+prometheus-fastapi-instrumentator==7.1.0
+pypdf==5.4.0
+python-arango==8.1.6
+python-multipart==0.0.20
+pyyaml==6.0.2
+requests==2.32.3
+shortuuid==1.0.13
+uvicorn==0.34.2
