Architecture specific args for a few containers (#1627)
Signed-off-by: Abolfazl Shahbazi <12436063+ashahba@users.noreply.github.com>
(cherry picked from commit 174af63b7c382e99ba296d51d8fde47305ae8814)

--- a/comps/third_parties/gpt-sovits/src/Dockerfile
+++ b/comps/third_parties/gpt-sovits/src/Dockerfile
@@ -2,6 +2,10 @@
 # SPDX-License-Identifier: Apache-2.0
 
 FROM python:3.10-slim
+
+# Set this to "cpu" or "gpu" or etc
+ARG ARCH="cpu"
+
 RUN useradd -m -s /bin/bash user && \
     mkdir -p /home/user
 
@@ -15,8 +19,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends --fix-missing \
     google-perftools \
     libomp-dev \
     numactl \
-    wget && \
-    pip install --upgrade pip
+    wget
 
 ENV LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libiomp5.so:/usr/lib/x86_64-linux-gnu/libtcmalloc.so.4
 ENV MALLOC_CONF="oversize_threshold:1,background_thread:true,metadata_thp:auto,dirty_decay_ms:9000000000,muzzy_decay_ms:9000000000"
@@ -25,12 +28,16 @@ ENV LANG=C.UTF-8
 # Clone source repo
 RUN git clone --depth=1 --branch openai_compat --single-branch https://github.com/Spycsh/GPT-SoVITS.git
 
-RUN pip install --no-cache-dir -r GPT-SoVITS/requirements.txt && \
-    pip install --no-cache-dir --upgrade setuptools && \
-    python -m nltk.downloader averaged_perceptron_tagger_eng cmudict && \
+RUN pip install --no-cache-dir --upgrade pip setuptools && \
+    if [ ${ARCH} = "cpu" ]; then \
+      pip install --no-cache-dir --extra-index-url https://download.pytorch.org/whl/cpu -r GPT-SoVITS/requirements.txt; \
+    else \
+      pip install --no-cache-dir -r GPT-SoVITS/requirements.txt; \
+    fi
+
+RUN python -m nltk.downloader averaged_perceptron_tagger_eng cmudict && \
     mv /root/nltk_data /home/user/ && \
     mv GPT-SoVITS /home/user/
-
 
 COPY --chown=user:user comps/third_parties/gpt-sovits/src/start.sh /home/user/GPT-SoVITS
 
