--- a/comps/llms/src/faq-generation/Dockerfile
+++ b/comps/llms/src/faq-generation/Dockerfile
@@ -1,7 +1,11 @@
 # Copyright (C) 2024 Intel Corporation
 # SPDX-License-Identifier: Apache-2.0
 
+# Use a base image
 FROM python:3.11-slim
+
+# Set this to "cpu" or "gpu" or etc
+ARG ARCH="cpu"
 
 RUN apt-get update -y && apt-get install -y --no-install-recommends --fix-missing \
     libgl1-mesa-glx \
@@ -14,7 +18,11 @@ RUN useradd -m -s /bin/bash user && \
 COPY comps /home/user/comps
 
 RUN pip install --no-cache-dir --upgrade pip setuptools && \
-    pip install --no-cache-dir -r /home/user/comps/llms/src/faq-generation/requirements.txt
+    if [ ${ARCH} = "cpu" ]; then \
+      pip install --no-cache-dir --extra-index-url https://download.pytorch.org/whl/cpu -r /home/user/comps/llms/src/faq-generation/requirements.txt; \
+    else \
+      pip install --no-cache-dir -r /home/user/comps/llms/src/faq-generation/requirements.txt; \
+    fi
 
 ENV PYTHONPATH=$PYTHONPATH:/home/user
 
