--- a/comps/third_parties/bridgetower/src/Dockerfile
+++ b/comps/third_parties/bridgetower/src/Dockerfile
@@ -2,6 +2,10 @@
 # SPDX-License-Identifier: Apache-2.0
 
 FROM python:3.10-slim
+
+# Set this to "cpu" or "gpu" or etc
+ARG ARCH="cpu"
+
 RUN useradd -m -s /bin/bash user && \
     mkdir -p /home/user && \
     chown -R user /home/user/
@@ -15,7 +19,11 @@ ENV PYTHONPATH=/home/user:/usr/lib/habanalabs/:/optimum-habana
 COPY --chown=user comps /home/user/comps
 
 RUN pip install --no-cache-dir --upgrade pip setuptools && \
-    pip install --no-cache-dir -r /home/user/comps/third_parties/bridgetower/src/requirements.txt
+    if [ ${ARCH} = "cpu" ]; then \
+      pip install --no-cache-dir --extra-index-url https://download.pytorch.org/whl/cpu -r /home/user/comps/third_parties/bridgetower/src/requirements.txt; \
+    else \
+      pip install --no-cache-dir -r /home/user/comps/third_parties/bridgetower/src/requirements.txt; \
+    fi
     
 
 ENV PYTHONPATH=$PYTHONPATH:/home/user
