--- a/comps/lvms/src/Dockerfile
+++ b/comps/lvms/src/Dockerfile
@@ -3,6 +3,9 @@
 
 FROM python:3.11-slim
 
+# Set this to "cpu" or "gpu" or etc
+ARG ARCH="cpu"
+
 RUN useradd -m -s /bin/bash user && \
     mkdir -p /home/user && \
     chown -R user /home/user/
@@ -12,7 +15,11 @@ ENV LANG=C.UTF-8
 COPY comps /home/user/comps
 
 RUN pip install --no-cache-dir --upgrade pip setuptools && \
-    pip install --no-cache-dir -r /home/user/comps/lvms/src/requirements.txt && \
+    if [ ${ARCH} = "cpu" ]; then \
+      pip install --no-cache-dir --extra-index-url https://download.pytorch.org/whl/cpu -r /home/user/comps/lvms/src/requirements.txt; \
+    else \
+      pip install --no-cache-dir -r /home/user/comps/lvms/src/requirements.txt; \
+    fi && \
     pip install --no-cache-dir --upgrade transformers
 
 ENV PYTHONPATH=$PYTHONPATH:/home/user
