Architecture specific args for a few containers (#1634)
Signed-off-by: Abolfazl Shahbazi <12436063+ashahba@users.noreply.github.com>
(cherry picked from commit 771844d3463e235a0b85f494239f8fa1fb078040)

--- a/comps/third_parties/wav2lip/src/Dockerfile
+++ b/comps/third_parties/wav2lip/src/Dockerfile
@@ -4,6 +4,9 @@
 # Use a base image
 FROM python:3.11-slim
 
+# Set this to "cpu" or "gpu" or etc
+ARG ARCH="cpu"
+
 # Set environment variables
 ENV LANG=en_US.UTF-8
 ENV PYTHONPATH=/usr/local/lib/python3.11/site-packages:/home:/home/user
@@ -28,7 +31,7 @@ COPY comps /home/user/comps
 COPY comps/third_parties/wav2lip/src/entrypoint.sh /usr/local/bin/entrypoint.sh
 
 # Install ffmpeg with x264 software codec
-RUN git clone https://github.com/FFmpeg/FFmpeg.git /home/user/comps/animation/src/FFmpeg
+RUN git clone --depth=1 https://github.com/FFmpeg/FFmpeg.git /home/user/comps/animation/src/FFmpeg
 WORKDIR /home/user/comps/animation/src/FFmpeg
 RUN ./configure --enable-gpl --enable-libx264 --enable-cross-compile && \
     make -j$(nproc-1) && \
@@ -37,7 +40,7 @@ RUN ./configure --enable-gpl --enable-libx264 --enable-cross-compile && \
 RUN chmod +x $(which ffmpeg)
 
 # Upgrade pip
-RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip setuptools
 
 # Install Wav2Lip from pip
 RUN pip install --no-cache-dir --no-deps Wav2Lipy
@@ -53,8 +56,11 @@ ENV PYTHONPATH="$PYTHONPATH:/usr/local/lib/python3.11/site-packages/gfpgan"
 WORKDIR /usr/local/lib/python3.11/site-packages
 
 # Install pip dependencies
-RUN pip install --no-cache-dir --upgrade pip setuptools && \
-    pip install --no-cache-dir -r /home/user/comps/animation/src/requirements.txt
+RUN if [ ${ARCH} = "cpu" ]; then \
+      pip install --no-cache-dir --extra-index-url https://download.pytorch.org/whl/cpu -r /home/user/comps/animation/src/requirements.txt; \
+    else \
+      pip install --no-cache-dir -r /home/user/comps/animation/src/requirements.txt; \
+    fi
 
 # Custom patches
 # Modify the degradations.py file to import rgb_to_grayscale from torchvision.transforms.functional
